--- a/custom_components/excluded/manifest.json
+++ b/custom_components/excluded/manifest.json
@@ -5,5 +5,6 @@
     "documentation": "https://github.com/DVDet/excluded",
     "dependencies": [],
     "codeowners": ["@DVDet"],
-    "requirements": []
+    "requirements": [],
+    "config_flow": true
 }
